# gtfu

./: .nvim.lua  Cargo.toml  LICENSE  README.md  THIRDPARTY.yml  TODOS.md  WIP.md  build.rs  notes.md
.cargo/: config.toml
src/: cli_parser.rs  lib.rs  main.rs  wayland_idle.rs  window.rs  winit_app.rs
src/break_window/: testing_windows.rs  window.rs  winit_app.rs
src/idle_detection/: idle.rs  wayland_idle.rs
