[package]
name = "gtfu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
human-panic = "2.0.2"
log = "0.4.22"
lazy_static = {version="1.5.0", optional=true}
wayland-client= {version="0.31.8", optional=true}
wayland-protocols= {version="0.32.6", optional=true, features = ["staging", "client"]}


[target.'cfg(not(features="wayland"))'.dependencies.user-idle]
version = "0.6.0"

[build-dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
clap_mangen = "0.2.24"

[features]
wayland = ["dep:wayland-protocols", "dep:wayland-client","dep:lazy_static"]
