[package]
name = "gtfu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
human-panic = "2.0.2"
log = "0.4.22"
user-idle = "0.6.0"


# WAYLAND support
#[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
uzers = "0.12"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
lazy_static = "1.5"

[build-dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
clap_mangen = "0.2.24"

